# dugalaxy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dugalaxy.config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: getting-started.md  index.md  template-spec.md
src/dugalaxy/: __init__.py
src/dugalaxy/api/: __init__.py  app.py
src/dugalaxy/authoring/: __init__.py  diagnostics.py  template_builder.py
src/dugalaxy/cli/: __init__.py  main.py  starter.py
src/dugalaxy/config/: __init__.py  loader.py  schema.py
src/dugalaxy/cost/: __init__.py  cache.py  estimator.py
src/dugalaxy/emit/: __init__.py  index.py  jsonl.py  record.py  yaml.py
src/dugalaxy/generator/: __init__.py  core.py  grounding.py  interpolation.py  validation.py
src/dugalaxy/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compatible.py
src/dugalaxy/reporting/: __init__.py  summary.py
src/dugalaxy/scenario/: __init__.py  composites.py  engine.py  faker_registry.py  primitives.py  resolver.py
src/dugalaxy/template/: __init__.py  discovery.py  errors.py  loader.py  spec.py
src/dugalaxy/templates/: b2b-invoice-generation.yaml  customer-support.yaml  quickstart.yaml  travel-concierge.yaml
templates/: security-incident-triage.yaml
tests/: test_cli.py  test_config.py  test_cost.py  test_diagnostics.py  test_discovery.py  test_emit.py  test_generator.py  test_grounding.py  test_interpolation.py  test_providers.py  test_reporting.py  test_scenario.py  test_smoke.py  test_template.py  test_template_builder.py  test_validation.py
