[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dugalaxy"
version = "0.1.0"
description = "Author a data template once, generate endless realistic, consistent test data forever — no re-prompting."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "Sara Mo", email = "info@nugalaxy.ai" }]
keywords = ["synthetic-data", "test-data", "llm-eval", "fine-tuning", "data-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.12",        # CLI
    "pydantic>=2.6",      # spec + config validation
    "pyyaml>=6.0",        # template / config parsing
    "jinja2>=3.1",        # {{ scenario.x }} interpolation + | json filter
    "faker>=40.23,<41",   # seeded realistic values — pinned: its bundled data must
                          # not shift between releases or the determinism contract
                          # breaks. Bumping the range requires updating golden tests.
    "httpx>=0.27",        # provider HTTP calls
    "rich>=13.7",         # CLI output, run summaries, cost estimates
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.scripts]
dugalaxy = "dugalaxy.cli.main:app"

[project.urls]
Homepage = "https://github.com/m2sarah2/dugalaxy"
Documentation = "https://github.com/m2sarah2/dugalaxy/blob/main/docs/template-spec.md"
Repository = "https://github.com/m2sarah2/dugalaxy"
Issues = "https://github.com/m2sarah2/dugalaxy/issues"
Changelog = "https://github.com/m2sarah2/dugalaxy/blob/main/CHANGELOG.md"

# ──────────────────────────── tooling ────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/dugalaxy"]
# The wheel ships only two vetted templates: a zero-setup demo and the public flagship.
# Every other file in templates/ (extra GitHub examples, anything git-ignored such as the
# private SOC template) is excluded here and re-added by force-include — a strict allowlist
# so nothing unvetted can ever leak into a published wheel, regardless of what sits on disk.
exclude = ["src/dugalaxy/templates/*.yaml"]
force-include = { "src/dugalaxy/templates/quickstart.yaml" = "dugalaxy/templates/quickstart.yaml", "src/dugalaxy/templates/customer-support.yaml" = "dugalaxy/templates/customer-support.yaml" }

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# E/F pyflakes+pycodestyle, I import sort, B bugbear, UP pyupgrade,
# N naming, SIM simplify, RUF ruff-specific.

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=dugalaxy --cov-report=term-missing"
